# m3tid

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: delete-web-preview.yml  sphinx.yml
docs/: M3TIDScoringSpreadsheet.xlsx  changelog.rst  conclusion.rst  conf.py  dimensions.rst  forward.rst  getting-started.rst  gettingstarted.rst  implementing.rst  index.rst  introduction.rst  m3tid-wp.rst  maxmature.rst  measuring.rst  spreadsheet.rst  what-is-tid.rst  whatistid.rst
docs/_static/: ctid_logo_white.xcf
docs/_static/js/: ctid.js
docs/components/: cti.rst  dm.rst  index.rst  tne.rst
docs/extra/: INFORM.xlsx  ~$INFORM.xlsx
