[tool.poetry]
name = "m3tid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
