[tool.poetry]
name = "m3tid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-slugify = "^8.0.4"


[tool.poetry.group.dev.dependencies]
sphinx = "6.2"
sphinx-autobuild = "^2021.3.14"
sphinx-wagtail-theme = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
